# PiVot

./: .asoundrc  .gitignore  ACTIONS.md  COMMANDS.md  IMPLEMENTATION.md  QUICK_FIX.md  RAG.txt  README.md  ROBOTICS_ER_INTEGRATION.md  SERVO_INTEGRATION.md  cam.py  cam2.py  cam_simple.py  cam_test.py  camera_test.py  check_audio.py  config.py  demo_actions.py  down.py  fix_pyaudio.sh  main.py  mimi.py  monitor_wakeword_distance.py  network_setup.py  prepare_voice_samples.py  pyproject.toml  quick_install.py  rag_prompt.txt  record_audio.py  response_parser.py  servo_control.py  setup_all.sh  setup_all_windows.bat  setup_permissions.sh  start_pivot_assistant.bat  start_pivot_assistant.sh  test_camera.py  test_connection.py  test_cross_platform.py  test_installation.py  (+6 more)
s-compornents/: AI.py  wake.py  wakeword-detect.py
s-compornents/compornents/: key.env  paibott_o.onnx  paibott_o.tflite  pie_bott_o.onnx  pie_bott_o.tflite  taro_tsuu.onnx  taro_tsuu.tflite
s_compornents/: image_upload_server.py  katakana_transcriber.py  line.py  pi_camera_controller.py  pivot_server_client.py  requirements.txt  rr.py  setup.py  setup_1.py  setup_2.py  setup_vosk_model.py  voice.py  wakeword_detect_ext.py
