[project]
name = "smple"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "faster-whisper>=1.2.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "google-generativeai>=0.8.5",
    "librosa>=0.11.0",
    "noisereduce>=3.0.3",
    "numpy<2",
    "pillow>=11.3.0",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "qrcode[pil]>=8.0",
    "scipy>=1.13.1",
    "smbus2>=0.4.0",
]
