[project]
name = "pivot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "local-wake>=0.1.0",
    "picamera2>=0.3.31",
    "pyserial>=3.5",
    "python-dotenv>=1.2.1",
    "soundfile>=0.13.1",
    "pyserial>=3.5",
]
